# VisageDvachevsky-veil-client

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  build_client.sh  install_client.sh  install_veil.sh
.github/workflows/: ci.yml  integration-tests.yml  network-emulation.yml  security-tests.yml  unit-tests.yml
cmake/: Dependencies.cmake  ProjectOptions.cmake  Warnings.cmake
configs/: veil-client.conf.example  veil-client.service  veil-server.conf.example  veil-server.service
docs/: architecture_overview.md  client_ui_design.md  configuration.md  deployment_guide.md  dpi_bypass_modes.md  principles_of_operation.md  protocol_wrappers.md  reliability.md  thread_model.md  windows_architecture.md
experiments/: bitmap_trace  bitmap_trace.cpp  test_clone.sh  test_fixed_install.sh  test_install_simulation.sh  test_replay_cache_deadlock.cpp  wraparound_ack_test  wraparound_ack_test.cpp  wraparound_test  wraparound_test.cpp
scripts/: run_e2e_tests.sh  run_transport_netem.sh  setup-wizard.sh
scripts/dev/: Dockerfile.test  netem-loopback.sh
src/: CMakeLists.txt
src/client/: client_config.cpp  client_config.h  main.cpp
src/common/cli/: cli_utils.h
src/common/config/: app_config.cpp  app_config.h
src/common/crypto/: crypto_engine.cpp  crypto_engine.h  random.cpp  random.h  secure_buffer.h
src/common/daemon/: daemon.cpp  daemon.h
src/common/gui/: theme.h
src/common/handshake/: handshake_processor.cpp  handshake_processor.h  handshake_replay_cache.cpp  handshake_replay_cache.h
src/common/ipc/: ipc_protocol.cpp  ipc_protocol.h  ipc_socket.cpp  ipc_socket.h
src/common/logging/: constrained_logger.cpp  constrained_logger.h  logger.cpp  logger.h
src/common/metrics/: metrics.cpp  metrics.h
src/common/obfuscation/: obfuscation_profile.cpp  obfuscation_profile.h
src/common/packet/: packet_builder.cpp  packet_builder.h
src/common/protocol_wrapper/: websocket_wrapper.cpp  websocket_wrapper.h
src/common/session/: idle_timeout.cpp  idle_timeout.h  replay_window.cpp  replay_window.h  session_lifecycle.cpp  session_lifecycle.h  session_rotator.cpp  session_rotator.h
src/common/signal/: signal_handler.cpp  signal_handler.h
src/common/utils/: advanced_rate_limiter.cpp  advanced_rate_limiter.h  graceful_degradation.cpp  graceful_degradation.h  rate_limiter.cpp  rate_limiter.h  thread_checker.h  timer_heap.cpp  timer_heap.h
src/gui-client/: CMakeLists.txt  connection_widget.cpp  connection_widget.h  diagnostics_widget.cpp  diagnostics_widget.h  ipc_client_manager.cpp  ipc_client_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  settings_widget.cpp  settings_widget.h
src/gui-server/: CMakeLists.txt  client_list_widget.cpp  client_list_widget.h  ipc_client_manager.cpp  ipc_client_manager.h  mainwindow.cpp  mainwindow.h  server_status_widget.cpp  server_status_widget.h
src/server/: main.cpp  server_config.cpp  server_config.h  session_table.cpp  session_table.h
src/tools/: CMakeLists.txt  performance_validation.cpp  transport_bench.cpp
src/transport/event_loop/: event_loop.cpp  event_loop.h
src/transport/mux/: ack_bitmap.cpp  ack_bitmap.h  ack_scheduler.cpp  ack_scheduler.h  fragment_reassembly.cpp  fragment_reassembly.h  frame.h  mux_codec.cpp  mux_codec.h  reorder_buffer.cpp  reorder_buffer.h  retransmit_buffer.cpp  retransmit_buffer.h
src/transport/session/: transport_session.cpp  transport_session.h
src/transport/stats/: transport_stats.cpp  transport_stats.h
src/transport/udp_socket/: udp_socket.cpp  udp_socket.h
src/tun/: mtu_discovery.cpp  mtu_discovery.h  routing.cpp  routing.h  tun_device.cpp  tun_device.h
src/tunnel/: session_migration.cpp  session_migration.h  tunnel.cpp  tunnel.h
tests/integration/: CMakeLists.txt  handshake_integration.cpp  reliability_integration.cpp  security_integration.cpp  transport_integration.cpp
tests/unit/: CMakeLists.txt  ack_bitmap_tests.cpp  ack_scheduler_tests.cpp  advanced_rate_limiter_tests.cpp  config_tests.cpp  constrained_logging_tests.cpp  crypto_tests.cpp  daemon_tests.cpp  fragment_reassembly_tests.cpp  handshake_replay_cache_tests.cpp  handshake_tests.cpp  metrics_tests.cpp  mtu_discovery_tests.cpp  mux_codec_tests.cpp  obfuscation_tests.cpp  packet_tests.cpp  random_tests.cpp  reorder_buffer_tests.cpp  replay_window_tests.cpp  retransmit_buffer_tests.cpp  routing_tests.cpp  session_lifecycle_tests.cpp  session_migration_tests.cpp  session_table_tests.cpp  signal_handler_tests.cpp  thread_checker_tests.cpp  timer_heap_tests.cpp  transport_session_tests.cpp  tun_device_tests.cpp  udp_socket_tests.cpp  websocket_wrapper_tests.cpp
